@@ -942,4 +942,15 @@ explicit port number. */
 
 enum { FILTER_UNSET, FILTER_FORWARD, FILTER_EXIM, FILTER_SIEVE };
 
+/* Codes for ESMTP facilities offered by peer */
+
+#define PEER_OFFERED_TLS	BIT(0)
+#define PEER_OFFERED_IGNQ	BIT(1)
+#define PEER_OFFERED_PRDR	BIT(2)
+#define PEER_OFFERED_UTF8	BIT(3)
+#define PEER_OFFERED_DSN	BIT(4)
+#define PEER_OFFERED_PIPE	BIT(5)
+#define PEER_OFFERED_SIZE	BIT(6)
+
+
 /* End of macros.h */
