@@ -24,7 +24,7 @@ Connecting to 127.0.0.1 [127.0.0.1]:1224 from ip4.ip4.ip4.ip4 ... connected
          250-HELP
          250 AUTH LOGIN
 not using PIPELINING
-use_dsn=0
+not using DSN
   SMTP>> MAIL FROM:<CALLER@myhost.test.ex>
   SMTP<< 250 Sender OK
   SMTP>> RCPT TO:<userx@domain.com>
