@@ -4,6 +4,8 @@ Change log file for Exim from version 4.21
 
 Exim version 4.88
 -----------------
+JH/01 Use SIZE on MAIL FROM in a cutthrough connection, if the destination
+      supports it and a size is available (ie. the sending peer gave us one).
 
 
 Exim version 4.87
